[project]
name = "python-flask-dev"
authors = [
    { name = "Dani", email = "daniasestan@gmail.com" },
]
description = "Package containing modules with 'helper' functions to support the development of Python Flask applications."
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Framework :: Flask",
]
license = "MIT"
license-files = [
    "LICEN[CS]E*",
]
dependencies = [
    "Flask",
    "numpy",
    "pandas",
    "build",
    "twine",
    "requests",
    "tomli_w",
]
version = "0.0.14"

[build-system]
requires = [
    "setuptools >= 77.0.3",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"
